--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "isaachome@highway",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
     "concurrently": "^7.0.0",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
