--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
+    "fast-csv": "^4.3.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
