--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "colors": "^1.4.0",
     "concurrently": "^7.0.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
